fix to horizontal scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,7 +160,7 @@ button {
 }
 
 .mat-drawer-inner-container {
-  overflow: auto !important;
+  overflow: hidden !important;
 }
 
 .mat-mdc-list-item {
